Start on sourcepawn API

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sourcepawn"]
 	path = sourcepawn
 	url = https://github.com/alliedmodders/sourcepawn.git
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json.git
