--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+    - name: Set up GCC
+      uses: egor-tensin/setup-gcc@v1
+      with:
+        version: latest
+        platform: x86
+
     - name: Build Boost
       # You may pin to the exact commit or the version.
       # uses: egor-tensin/build-boost@bfb61b9fccc827f0c502fc400f6f63cc74f2d79a
