Use boost librarydir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
     add_definitions(-DWIN32)
 else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L$ENV{HOME}/boost_1_75_0/stage/lib -std=c++17 -pipe -DSOURCEMOD_BUILD -fno-strict-aliasing -m32")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L${BOOST_LIBRARYDIR} -std=c++17 -pipe -DSOURCEMOD_BUILD -fno-strict-aliasing -m32")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3")
 endif()
