--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -D "CMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}" -D "BOOST_LIBRARYDIR=${{steps.boost.outputs.librarydir}}"
+      run: cmake -B ${{github.workspace}}/build -D "CMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}" -D "BOOST_LIBRARYDIR=${{steps.boost.outputs.librarydir}}" -D "BOOST_ROOT=${{steps.boost.outputs.root}}"
 
     - name: Build
       # Build your program with the given configuration
