--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 before_script:
 - dnf -y install glibc-static.i686 openssl-devel.i686 libstdc++-static.i686 glibc-devel.i686 cmake make gcc g++
 - curl -o boost.tar.gz -L https://boostorg.jfrog.io/artifactory/main/release/1.75.0/source/boost_1_75_0.tar.gz
-- tar -xvf boost.tar.gz
+- tar -xf boost.tar.gz
 - cd boost_1_75_0 && ./bootstrap.sh && ./b2 variant=release link=static address-model=32
 
 build:
